display page index is finish

--- a/titleTony/include/nav.html
+++ b/titleTony/include/nav.html
@@ -6,9 +6,9 @@
     </li>
     <!-- Logo -->
     <li class="g-hidden-lg-down nav-logo-item g-mx-15--lg">
-      <a href="/" class="js-go-to navbar-brand mr-0"
+      <a href="index.php" class="js-go-to navbar-brand mr-0"
          data-type="static">
-        <img class="d-block g-width-140 g-width-160--md" src="assets/img/logo-light.png" alt="Image Description"
+        <img class="d-block g-width-140 g-width-160--md" src="assets/img/SVCM.png" alt="Image Description"
              data-header-fix-moment-exclude="d-block"
              data-header-fix-moment-classes="d-none">
       </a>
